--- a/KwetterClient/src/app/tweets/tweets.component.html
+++ b/KwetterClient/src/app/tweets/tweets.component.html
@@ -1,8 +1,11 @@
 <div *ngIf="user">
-  <h2>{{ user.naam | uppercase }} Tweets</h2>
-  <ul class="users">
-    <li *ngFor="let tweet of tweets">
-      <span class="badge">{{tweet.Id}}</span> {{tweet.content}}
-    </li>
-  </ul>
-  </div>
+  <h2>Tweets by {{ user.naam}} </h2>
+  <table *ngFor="let tweet of tweets">
+    <tr  >
+      <td rowspan="2">
+        <span class="badge"> {{tweet.content}}</span>
+        <span>{{tweet.postDate}}</span>
+      </td>
+    </tr>
+  </table>
+</div>
