--- a/KwetterClient/src/app/user-detail/user-detail.component.html
+++ b/KwetterClient/src/app/user-detail/user-detail.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="user">
 
   <h2>{{ user.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{user.Id}}</div>
+ 
   <div>
     <label>
       name:
-      <input [(ngModel)]="user.naam" placeholder="naam">
+      <span>{{user.naam}}</span> 
     </label>
   </div>
   <div><span>bio: </span>{{user.bio}}</div>
