--- a/KwetterClient/src/app/tweets/tweets.component.html
+++ b/KwetterClient/src/app/tweets/tweets.component.html
@@ -1,11 +1,14 @@
+<body ng-controller="MainCtrl">
 <div *ngIf="user">
   <h2>Tweets by {{ user.naam}} </h2>
-  <table *ngFor="let tweet of tweets">
+  <table *ngFor="let tweet of tweets" [class.selected]="tweet === selectedTweet">
     <tr  >
       <td rowspan="2">
         <span class="badge"> {{tweet.content}}</span>
         <span>{{tweet.postDate}}</span>
+        <button type="button"  (click)="deleteTweet(tweet.Id)">X</button>
       </td>
     </tr>
   </table>
 </div>
+  </body>
