--- a/KwetterClient/src/app/users/users.component.html
+++ b/KwetterClient/src/app/users/users.component.html
@@ -11,6 +11,7 @@
   </ul>
     </div>-->
     <div >
+      <app-login></app-login>
   <app-login *ngIf="!loggedUser" class="hidden"></app-login>
 </div>
     <div *ngIf="selectedUser" class="hidden">
