Werkt nog steeds niet, maar het idee dat ik een stap dichterbij ben

--- a/KwetterClient/src/app/app.component.html
+++ b/KwetterClient/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
+<script type="text/javascript" src="~/signalr/hubs"></script>
 <h1>
   {{ title }}
 </h1>
