Nog steeds de zelfde error "Cannot read property 'hub' of undefined"

--- a/KwetterClient/src/app/app.component.html
+++ b/KwetterClient/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <script type="text/javascript" src="~/signalr/hubs"></script>
+<script src="/signalr/hubs" type="text/javascript"></script>
 <h1>
   {{ title }}
 </h1>
