Wat vooruitgang; moest de connection pas maken nadat het document ready is

--- a/KwetterClient/src/app/app.component.html
+++ b/KwetterClient/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<script type="text/javascript" src="~/signalr/hubs"></script>
-<script src="/signalr/hubs" type="text/javascript"></script>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="~/signalr/hubs"></script>
+  <script src="~/signalr/hubs"></script>
+</head>
 <h1>
   {{ title }}
 </h1>
